--- a/services/content-classifier/requirements.txt
+++ b/services/content-classifier/requirements.txt
@@ -1,9 +1,12 @@
 Flask==2.3.3
 gunicorn==21.2.0
+werkzeug==2.3.7
+flask-swagger-ui==4.11.1
+Flask-Cors==4.0.0
 requests==2.31.0
 scikit-learn==1.3.1
 numpy==1.25.2
 pandas==2.1.0
 pytest==7.4.2
 python-dotenv==1.0.0
-Flask-Cors==4.0.0 
+nltk==3.8.1 
