--- a/services/content-classifier/requirements.txt
+++ b/services/content-classifier/requirements.txt
@@ -9,4 +9,9 @@ numpy==1.25.2
 pandas==2.1.0
 pytest==7.4.2
 python-dotenv==1.0.0
-nltk==3.8.1 
+nltk==3.8.1
+langdetect==1.0.9
+joblib==1.3.2
+torch==2.1.0
+transformers==4.35.0
+tqdm==4.66.1 
